# Project_MachineLearning_Client

./: .gitignore  Dockerfile  Enunciado.ipynb  Guía.ipynb  README.md  pyproject.toml  requirements.txt  uv.lock.bak
.streamlit/: config.toml
app/: 1_Inicio.py  __init__.py  app.py  appv2.py  appv3.py  appv4.py  components.py  explain.py  home.py  loaders.py  old_app.py  utils.py
app/pages/: 2_Prediccion_individual.py  3_Scoring_masivo.py  4_Ayuda_About.py
data/: quejas34.csv
data/transformado/: quejas_features.csv  quejas_limpias.csv
docs/: Presentacion_App_Prediccion_ML.pptx  insight_tiempo_respuesta.pptx
models/: catalogs.yaml  final_model_xgboost_predict_disputa.pkl  model_config_xgboost_predict_disputa.yaml  results_disputed_models.csv  top_feature_model_xgboost_predict_disputa.csv  trained_model_LinearSVC_calibrated.pkl  trained_model_LogisticRegression_balanced.pkl
models/data/: X_features.csv  y_disputed.csv  y_timely.csv
notebooks/: 01_Fuentes_Limpieza.ipynb  02_EDA.ipynb  03_Entrenamiento_Evaluacion.ipynb  04_LimpiarYAML.ipynb  README.md
quilidev_proyecto_final_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build_catalogs.py
src/: evaluation.py  preprocessing.py  training.py
